--- a/packages/SystemUI/res/values/strings.xml
+++ b/packages/SystemUI/res/values/strings.xml
@@ -1026,7 +1026,7 @@
         <item>Notifications</item> <!-- STREAM_RING -->
         <item>Media</item> <!-- STREAM_MUSIC -->
         <item>Alarms</item> <!-- STREAM_ALARM -->
-        <item></item> <!-- STREAM_NOTIFICATION -->
+        <item>Notification</item> <!-- STREAM_NOTIFICATION -->
         <item>Bluetooth calls</item> <!-- STREAM_BLUETOOTH_SCO -->
         <item></item> <!-- STREAM_SYSTEM_ENFORCED -->
         <item></item> <!-- STREAM_DTMF -->
